--- a/index.html
+++ b/index.html
@@ -189,39 +189,34 @@
     <script>
         const questions = [
             {
-                question: "What's the most popular Christmas movie of all time?",
-                options: ["Home Alone", "It's a Wonderful Life", "Elf", "The Grinch"],
+                question: "What color is Santa's suit?",
+                options: ["Blue", "Red", "Green", "Purple"],
                 correct: 1
             },
             {
-                question: "In what year was the first Christmas card sent?",
-                options: ["1843", "1867", "1901", "1820"],
-                correct: 0
-            },
-            {
-                question: "What do people traditionally put on top of a Christmas tree?",
-                options: ["A star", "A bow", "A snowflake", "An ornament"],
-                correct: 0
-            },
-            {
-                question: "Which country started the tradition of putting up a Christmas tree?",
-                options: ["United States", "England", "Germany", "France"],
+                question: "How many reindeer does Santa have?",
+                options: ["6", "8", "9", "10"],
                 correct: 2
             },
             {
-                question: "Complete the lyric: 'Jingle bells, jingle bells, jingle all the ___'",
-                options: ["Day", "Way", "Night", "Time"],
+                question: "What do you leave out for Santa on Christmas Eve?",
+                options: ["Pizza", "Cookies and milk", "Vegetables", "Coffee"],
                 correct: 1
             },
             {
-                question: "Finish the song: 'Rudolph the red-nosed reindeer, had a very shiny ___'",
-                options: ["Light", "Nose", "Coat", "Smile"],
+                question: "Complete the lyric: 'Don't stop ___'",
+                options: ["Trying", "Believing", "Moving", "Dancing"],
                 correct: 1
             },
             {
-                question: "Complete: 'Deck the halls with boughs of ___'",
-                options: ["Holly", "Mistletoe", "Pine", "Ivy"],
-                correct: 0
+                question: "Finish the lyric: 'Just a small town girl, living in a ___ world'",
+                options: ["Big", "Lonely", "Crazy", "Happy"],
+                correct: 1
+            },
+            {
+                question: "What month is Christmas in?",
+                options: ["November", "December", "January", "October"],
+                correct: 1
             }
         ];
 
